--- a/src/components/Board.module.css
+++ b/src/components/Board.module.css
@@ -1,11 +1,13 @@
 .board {
   display: grid;
-  width: 600px;
+  width: clamp(300px, 40vw, 600px);
   aspect-ratio: 1/1;
   max-width: 90%;
   margin: 3rem auto;
+  max-height: 600px;
+  height: clamp(300px, 40vw, 600px);
   padding: 5px;
-  gap: 5px;
+  grid-gap: 1%;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   grid-template-rows: repeat(3, minmax(0, 1fr));
   background-color: grey;
