--- a/src/components/Square.module.css
+++ b/src/components/Square.module.css
@@ -1,12 +1,13 @@
 .square {
   border: 2px solid black;
   background-color: rgba(0, 0, 0, 0.2);
-  aspect-ratio: 1/1;
+
   font-size: 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  padding: 0;
 }
 .x {
   color: black;
