--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html {
 
 body {
   margin: 0;
-  height: 100vh;
+
   position: relative;
   background-image: url(../src/images/grass.jpg);
   background-position: center;
@@ -46,7 +46,7 @@ body {
   box-shadow: -20px 20px 50px black;
 }
 .blurred-background {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
